samples/_failures_safe/1761127252_d76930_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eea6a240.c: In function ‘main’:
./samples/SAFE/__tmp_eea6a240.c:153:5: error: expected expression at end of input
  153 |     if (a < 0 || b < 0 || c < 0 || d <
      |     ^~
./samples/SAFE/__tmp_eea6a240.c:153:5: error: expected declaration or statement at end of input
